# Battleswitch

./: README.md
binaries/: battleswitch_firmware_mode_01.hex
hardware/: battleswitch_v1.brd  battleswitch_v1.sch
software/: CMakeLists.txt  hal.h  led_control.c  led_control.h  main.c  rc_input.c  rc_input.h  switch_control.c  switch_control.h
